--- a/package.json
+++ b/package.json
@@ -4,45 +4,54 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
-		"build": "next build",
+		"build": "prisma generate && next build",
 		"start": "next start",
 		"lint": "eslint",
-		"prod": "eslint && next build && next start"
+		"prod": "prisma generate && eslint && next build && next start",
+		"migrate": "prisma migrate dev && prisma generate",
+		"studio": "prisma studio --browser none"
 	},
 	"dependencies": {
+		"@prisma/adapter-libsql": "^7.0.1",
+		"@prisma/client": "^7.0.1",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"dotenv": "^17.2.3",
 		"lucide-react": "^0.554.0",
-		"next": "^16.0.3",
+		"next": "^16.0.4",
 		"next-themes": "^0.4.6",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
 		"sharp": "^0.34.5",
-		"tailwind-merge": "^3.4.0"
+		"tailwind-merge": "^3.4.0",
+		"zod": "^4.1.13"
 	},
 	"devDependencies": {
 		"@tailwindcss/postcss": "^4.1.17",
 		"@types/node": "^24.10.1",
-		"@types/react": "^19.2.5",
+		"@types/react": "^19.2.7",
 		"@types/react-dom": "^19.2.3",
 		"babel-plugin-react-compiler": "^1.0.0",
 		"eslint": "^9.39.1",
-		"eslint-config-next": "^16.0.3",
+		"eslint-config-next": "^16.0.4",
 		"eslint-plugin-react-hooks": "^7.0.1",
 		"prettier": "^3.6.2",
 		"prettier-plugin-tailwindcss": "^0.7.1",
+		"prisma": "^7.0.1",
 		"tailwindcss": "^4.1.17",
 		"tw-animate-css": "^1.4.0",
-		"typescript": "^5.1.0"
+		"typescript": "^5.9.3"
 	},
 	"trustedDependencies": [
+		"@prisma/engines",
 		"@tailwindcss/oxide",
+		"prisma",
 		"sharp",
 		"unrs-resolver"
 	],
 	"engines": {
-		"node": "22.x",
-		"npm": "11.x"
+		"node": ">=22.x.x",
+		"npm": ">=11.x.x"
 	},
 	"author": "Rohid Mondal",
 	"license": "MIT",
