--- a/package.json
+++ b/package.json
@@ -12,32 +12,34 @@
 		"studio": "prisma studio --browser none"
 	},
 	"dependencies": {
-		"@prisma/adapter-libsql": "^7.1.0",
-		"@prisma/client": "^7.1.0",
+		"@hookform/resolvers": "^5.2.2",
+		"@prisma/adapter-libsql": "^7.2.0",
+		"@prisma/client": "^7.2.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"dotenv": "^17.2.3",
-		"lucide-react": "^0.561.0",
-		"next": "^16.0.10",
+		"lucide-react": "^0.562.0",
+		"next": "^16.1.0",
 		"next-themes": "^0.4.6",
 		"react": "^19.2.3",
 		"react-dom": "^19.2.3",
+		"react-hook-form": "^7.68.0",
 		"sharp": "^0.34.5",
 		"tailwind-merge": "^3.4.0",
-		"zod": "^4.1.13"
+		"zod": "^4.2.1"
 	},
 	"devDependencies": {
 		"@tailwindcss/postcss": "^4.1.18",
-		"@types/node": "^25.0.1",
+		"@types/node": "^25.0.3",
 		"@types/react": "^19.2.7",
 		"@types/react-dom": "^19.2.3",
 		"babel-plugin-react-compiler": "^1.0.0",
-		"eslint": "^9.39.1",
-		"eslint-config-next": "^16.0.10",
+		"eslint": "^9.39.2",
+		"eslint-config-next": "^16.1.0",
 		"eslint-plugin-react-hooks": "^7.0.1",
 		"prettier": "^3.7.4",
 		"prettier-plugin-tailwindcss": "^0.7.2",
-		"prisma": "^7.1.0",
+		"prisma": "^7.2.0",
 		"tailwindcss": "^4.1.18",
 		"tw-animate-css": "^1.4.0",
 		"typescript": "^5.9.3"
