--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
 		"@hookform/resolvers": "^5.2.2",
 		"@prisma/adapter-libsql": "^7.2.0",
 		"@prisma/client": "^7.2.0",
+		"@radix-ui/react-label": "^2.1.8",
+		"@radix-ui/react-separator": "^1.1.8",
+		"@radix-ui/react-slot": "^1.2.4",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"dotenv": "^17.2.3",
