--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@hookform/resolvers": "^5.2.2",
 		"@prisma/adapter-libsql": "^7.2.0",
 		"@prisma/client": "^7.2.0",
+		"@radix-ui/react-checkbox": "^1.3.3",
 		"@radix-ui/react-label": "^2.1.8",
 		"@radix-ui/react-separator": "^1.1.8",
 		"@radix-ui/react-slot": "^1.2.4",
