Integrate better-auth and update environment configs
Added better-auth integration with Prisma adapter in src/lib/auth.ts. Updated .env.example and environment schemas to include BETTER_AUTH_SECRET, BETTER_AUTH_URL, and NEXT_PUBLIC_BETTER_AUTH_URL. Upgraded related dependencies in package.json and bun.lock.

--- a/.env.example
+++ b/.env.example
@@ -6,9 +6,12 @@
 # secrets in it. If you are cloning this repo, create a copy of this file named
 # ".env" and populate it with your secrets.
 
-# When adding additional environment variables, the schema files in "/src/app/env"
+# When adding additional environment variables, the schema files in "/src/liv/env"
 # should be updated accordingly.
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 DATABASE_URL="file:./prisma/dev.db"
+BETTER_AUTH_SECRET=
+BETTER_AUTH_URL=http://localhost:3000 # Base URL of your app
+NEXT_PUBLIC_BETTER_AUTH_URL=http://localhost:3000 # Base URL of your app
