--- a/package.json
+++ b/package.json
@@ -19,18 +19,19 @@
 		"@radix-ui/react-label": "^2.1.8",
 		"@radix-ui/react-separator": "^1.1.8",
 		"@radix-ui/react-slot": "^1.2.4",
+		"better-auth": "^1.4.10",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"dotenv": "^17.2.3",
 		"lucide-react": "^0.562.0",
-		"next": "^16.1.0",
+		"next": "^16.1.1",
 		"next-themes": "^0.4.6",
 		"react": "^19.2.3",
 		"react-dom": "^19.2.3",
-		"react-hook-form": "^7.68.0",
+		"react-hook-form": "^7.69.0",
 		"sharp": "^0.34.5",
 		"tailwind-merge": "^3.4.0",
-		"zod": "^4.2.1"
+		"zod": "^4.3.4"
 	},
 	"devDependencies": {
 		"@tailwindcss/postcss": "^4.1.18",
@@ -39,7 +40,7 @@
 		"@types/react-dom": "^19.2.3",
 		"babel-plugin-react-compiler": "^1.0.0",
 		"eslint": "^9.39.2",
-		"eslint-config-next": "^16.1.0",
+		"eslint-config-next": "^16.1.1",
 		"eslint-plugin-react-hooks": "^7.0.1",
 		"prettier": "^3.7.4",
 		"prettier-plugin-tailwindcss": "^0.7.2",
